--- a/IntBank.CuadernilloMvc/Web.config
+++ b/IntBank.CuadernilloMvc/Web.config
@@ -10,6 +10,9 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
+  <connectionStrings>
+    <add name="CRM" connectionString="Url=https://inteligobankdes.crm.dynamics.com; Username=ricardo@inteligobankdemo.onmicrosoft.com; Password=Rhino2019; AuthType=Office365;" />
+  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
