--- a/IntBank.CuadernilloMvc.BusinessLayer/IntBank.Reportes.BusinessLayer.csproj
+++ b/IntBank.CuadernilloMvc.BusinessLayer/IntBank.Reportes.BusinessLayer.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{5C095F53-BC5A-4C29-9991-5287EB1D0490}</ProjectGuid>
+    <ProjectGuid>{5111D30E-1CF0-4ACE-868A-9A1BE931B6C3}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>IntBank.CuadernilloMvc.OperationManagement</RootNamespace>
-    <AssemblyName>IntBank.CuadernilloMvc.OperationManagement</AssemblyName>
+    <RootNamespace>IntBank.CuadernilloMvc.BusinessLayer</RootNamespace>
+    <AssemblyName>IntBank.CuadernilloMvc.BusinessLayer</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -41,8 +41,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Log.cs" />
+    <Compile Include="CuadernilloProcessor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\IntBank.CuadernilloMvc.BusinessInterface\IntBank.Reportes.BusinessInterface.csproj">
+      <Project>{82B50054-1D31-412B-819B-234642A37250}</Project>
+      <Name>IntBank.Reportes.BusinessInterface</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
