--- a/IntBank.CuadernilloMvc.DataInterface/IntBank.Reportes.DataInterface.csproj
+++ b/IntBank.CuadernilloMvc.DataInterface/IntBank.Reportes.DataInterface.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{5111D30E-1CF0-4ACE-868A-9A1BE931B6C3}</ProjectGuid>
+    <ProjectGuid>{F5DEDD8E-7E9C-44DE-9176-185732B4BF56}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>IntBank.CuadernilloMvc.BusinessLayer</RootNamespace>
-    <AssemblyName>IntBank.CuadernilloMvc.BusinessLayer</AssemblyName>
+    <RootNamespace>IntBank.Reportes.DataInterface</RootNamespace>
+    <AssemblyName>IntBank.Reportes.DataInterface</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -41,14 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CuadernilloProcessor.cs" />
+    <Compile Include="ICuadernilloRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\IntBank.CuadernilloMvc.BusinessInterface\IntBank.CuadernilloMvc.BusinessInterface.csproj">
-      <Project>{82B50054-1D31-412B-819B-234642A37250}</Project>
-      <Name>IntBank.CuadernilloMvc.BusinessInterface</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
