--- a/IntBank.CuadernilloMvc.UT/IntBank.Reportes.UT.csproj
+++ b/IntBank.CuadernilloMvc.UT/IntBank.Reportes.UT.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{AF6A3465-1CBB-413B-80F6-955A774415C0}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>IntBank.CuadernilloMvc.UT</RootNamespace>
-    <AssemblyName>IntBank.CuadernilloMvc.UT</AssemblyName>
+    <RootNamespace>IntBank.Reportes.UT</RootNamespace>
+    <AssemblyName>IntBank.Reportes.UT</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
